design home screen

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,7 +10,7 @@
       </a>
       <div class="right menu">
         <div class="ui dropdown item">
-          Activity <i class="dropdown icon"></i>
+          Account <i class="dropdown icon"></i>
           <div class="menu">
             <a class="item">Log out</a>
             <a class="item">Log in</a>
