--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -9,37 +9,50 @@
 
     <div class="ui fluid raised card chatbox">
       <div class="content">
-          <div class="ui small feed">
-            <h4 class="ui header">Followers Activity</h4>
+          <div class="ui feed">
+
             <div class="event">
               <div class="content">
                 <div class="summary">
-                  <a>Elliot Fu</a> added <a>Jenny Hess</a> as a friend
+                  <em>Jane Rocha</em>: Text message
                 </div>
               </div>
             </div>
             <div class="event">
               <div class="content">
                 <div class="summary">
-                  <a>Stevie Feliciano</a> added <a>Elliot Fu</a> as a friend
+                  <em>Broce Rocha</em>: Text message
                 </div>
               </div>
             </div>
             <div class="event">
               <div class="content">
                 <div class="summary">
-                  <a>Helen Troy</a> added <a>Christian Rocha</a> as a friend
+                  <em>Telon Rocha</em>: Text message
                 </div>
               </div>
             </div>
             <div class="event">
               <div class="content">
                 <div class="summary">
-                  <a>Christian Rocha</a> signed up for the  site.
+                  <em>Christian Rocha</em>: Text message
                 </div>
               </div>
             </div>
           </div>
+        </div>
+
+        <div class="extra content">
+          <form class="ui reply form">
+            <div class="field">
+              <div class="ui fluid icon input">
+
+              <input type="text" placeholder="Enter a message...">
+                <i class="bordered inverted red edit icon"></i>
+              </div>
+            </div>
+
+          </form>
         </div>
       </div>
     </div>
