--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,9 +2,10 @@
 
   <div class="ui container">
 
-      <a class=" item">
-        Chatroom
-      </a>
+
+      <%= link_to "Chatroom", root_path,class:" item" %>
+
+
       <a class="item">
         Messages
       </a>
@@ -13,7 +14,9 @@
           Account <i class="dropdown icon"></i>
           <div class="menu">
             <a class="item">Log out</a>
-            <a class="item">Log in</a>
+
+
+            <%= link_to "Log in", login_path, class: "item" %>
             <a class="item">Sign up</a>
           </div>
         </div>
