--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -10,35 +10,9 @@
     <div class="ui fluid raised card chatbox">
       <div class="content">
           <div class="ui feed">
+             <%= render @messages %>
 
-            <div class="event">
-              <div class="content">
-                <div class="summary">
-                  <em>Jane Rocha</em>: Text message
-                </div>
-              </div>
-            </div>
-            <div class="event">
-              <div class="content">
-                <div class="summary">
-                  <em>Broce Rocha</em>: Text message
-                </div>
-              </div>
-            </div>
-            <div class="event">
-              <div class="content">
-                <div class="summary">
-                  <em>Telon Rocha</em>: Text message
-                </div>
-              </div>
-            </div>
-            <div class="event">
-              <div class="content">
-                <div class="summary">
-                  <em>Christian Rocha</em>: Text message
-                </div>
-              </div>
-            </div>
+
           </div>
         </div>
 
