--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -9,7 +9,7 @@
 
     <div class="ui fluid raised card chatbox">
       <div class="content">
-          <div class="ui feed">
+          <div class="ui feed" id="message-container" data-channel="ChatroomChannel">
              <%= render @messages %>
 
 
