--- a/app/views/chatroom/index.html.erb
+++ b/app/views/chatroom/index.html.erb
@@ -8,7 +8,7 @@
     <div class="twelve wide column">
 
     <div class="ui fluid raised card chatbox">
-      <div class="content">
+      <div class="content" id="messages-overflow">
           <div class="ui feed" id="message-container" data-channel="ChatroomChannel">
              <%= render @messages %>
 
